# rectangles

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: DESIGN.md  math_concepts.md  problem_description.md
examples/: README.md  generate_images.py
src/rectangles/: __init__.py  analyzer.py  cli.py  rectangle.py  strategies.py  visualizer.py
src/rectangles/axis_aligned/: __init__.py  adjacency.py  containment.py  intersection.py
src/rectangles/general/: __init__.py  adjacency.py  containment.py  intersection.py
src/rectangles/util/: __init__.py  util.py
tests/: __init__.py  test_analyzer.py
tests/axis_aligned/: __init__.py  test_adjacency.py  test_containment.py  test_intersection.py
tests/general/: __init__.py  test_adjacency.py  test_containment.py  test_intersection.py
tests/util/: __init__.py  test_collinear_segments.py  test_point_in_polygon.py  test_rectangle_validation.py  test_segments_intersect.py
