[project]
name = "rectangles"
version = "0.1.0"
description = "Rectangle Analysis"
authors = [
    { name = "Anurag Sharma", email = "anuragsoft@yahoo.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
]

[project.scripts]
rectangles = "rectangles.cli:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "D",   # pydocstyle (docstrings)
    "UP",  # pyupgrade (modern Python syntax)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
files = ["src", "tests"]
